// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should parse valid 1`] = `
{
  "SAD": "2022-08-28",
  "SAH1": 1.01,
  "SAH2": 2.02,
  "SAH3": 3.03,
  "SAH4": 4.04,
  "SAL1": 5.05,
  "SAL2": 6.06,
  "SAL3": 7.07,
  "SAL4": 8.08,
  "SAP1": 9.09,
  "SAP2": 10.1,
  "SAP3": 11.11,
  "SAP4": 12.12,
  "SAS1": 13.13,
  "SAS2": 14.14,
  "SAS3": 15.15,
  "SAS4": 16.16,
}
`;

exports[`should reject invalid 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Required",
    "path": [
      "stat_alltime",
    ],
    "received": "undefined",
  },
]
`;

exports[`should reject invalid 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Required",
    "path": [
      "stat_alltime",
      "SAD",
    ],
    "received": "undefined",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS4",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH4",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL4",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP4",
    ],
    "received": "nan",
  },
]
`;

exports[`should reject invalid 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP1",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP2",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP3",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAS4",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAH4",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAL4",
    ],
    "received": "nan",
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected number, received nan",
    "path": [
      "stat_alltime",
      "SAP4",
    ],
    "received": "nan",
  },
]
`;
